compiler/test/fail/array_des_missing_prop.js
// The property "1" does not exist on the target object

const elements = [1, , 2];
const [a, b, c] = elements;
